// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  class="FieldGroup"
  data-test-id="cf-ui-field-group"
>
  <div
    class="FieldGroup__item"
  >
    <div
      class="ControlledInputField"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="ControlledInputField__input Checkbox"
      >
        <input
          aria-label="Do you agree?"
          class="ControlledInput"
          data-test-id="cf-ui-controlled-input"
          id="agree"
          type="checkbox"
          value=""
        />
        <label
          class="Checkbox__ghost"
          for="agree"
        />
      </div>
      <div
        class="Checkbox__label-wrapper"
      >
        <label
          class="FormLabel ControlledInputField__label"
          data-test-id="cf-ui-form-label"
          for="agree"
        >
          Do you agree?
        </label>
        <p
          class="HelpText ControlledInputField__help-text"
          data-test-id="cf-ui-help-text"
        >
          Click if you agree
        </p>
      </div>
    </div>
  </div>
  <div
    class="FieldGroup__item"
  >
    <div
      class="ControlledInputField"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="ControlledInputField__input Checkbox"
      >
        <input
          aria-label="Do you really agree?"
          class="ControlledInput"
          data-test-id="cf-ui-controlled-input"
          id="reallyAgree"
          type="checkbox"
          value=""
        />
        <label
          class="Checkbox__ghost"
          for="reallyAgree"
        />
      </div>
      <div
        class="Checkbox__label-wrapper"
      >
        <label
          class="FormLabel ControlledInputField__label"
          data-test-id="cf-ui-form-label"
          for="reallyAgree"
        >
          Do you really agree?
        </label>
        <p
          class="HelpText ControlledInputField__help-text"
          data-test-id="cf-ui-help-text"
        >
          Click if you really agree
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component children in a row 1`] = `
<div
  class="FieldGroup my-extra-class FieldGroup--row"
  data-test-id="cf-ui-field-group"
>
  <div
    class="FieldGroup__item"
  >
    <div
      class="ControlledInputField"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="ControlledInputField__input Checkbox"
      >
        <input
          aria-label="Do you agree?"
          class="ControlledInput"
          data-test-id="cf-ui-controlled-input"
          id="agree"
          type="checkbox"
          value=""
        />
        <label
          class="Checkbox__ghost"
          for="agree"
        />
      </div>
      <div
        class="Checkbox__label-wrapper"
      >
        <label
          class="FormLabel ControlledInputField__label"
          data-test-id="cf-ui-form-label"
          for="agree"
        >
          Do you agree?
        </label>
        <p
          class="HelpText ControlledInputField__help-text"
          data-test-id="cf-ui-help-text"
        >
          Click if you agree
        </p>
      </div>
    </div>
  </div>
  <div
    class="FieldGroup__item"
  >
    <div
      class="ControlledInputField"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="ControlledInputField__input Checkbox"
      >
        <input
          aria-label="Do you really agree?"
          class="ControlledInput"
          data-test-id="cf-ui-controlled-input"
          id="reallyAgree"
          type="checkbox"
          value=""
        />
        <label
          class="Checkbox__ghost"
          for="reallyAgree"
        />
      </div>
      <div
        class="Checkbox__label-wrapper"
      >
        <label
          class="FormLabel ControlledInputField__label"
          data-test-id="cf-ui-form-label"
          for="reallyAgree"
        >
          Do you really agree?
        </label>
        <p
          class="HelpText ControlledInputField__help-text"
          data-test-id="cf-ui-help-text"
        >
          Click if you really agree
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="FieldGroup my-extra-class"
  data-test-id="cf-ui-field-group"
>
  <div
    class="FieldGroup__item"
  >
    <div
      class="ControlledInputField"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="ControlledInputField__input Checkbox"
      >
        <input
          aria-label="Do you agree?"
          class="ControlledInput"
          data-test-id="cf-ui-controlled-input"
          id="agree"
          type="checkbox"
          value=""
        />
        <label
          class="Checkbox__ghost"
          for="agree"
        />
      </div>
      <div
        class="Checkbox__label-wrapper"
      >
        <label
          class="FormLabel ControlledInputField__label"
          data-test-id="cf-ui-form-label"
          for="agree"
        >
          Do you agree?
        </label>
        <p
          class="HelpText ControlledInputField__help-text"
          data-test-id="cf-ui-help-text"
        >
          Click if you agree
        </p>
      </div>
    </div>
  </div>
  <div
    class="FieldGroup__item"
  >
    <div
      class="ControlledInputField"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="ControlledInputField__input Checkbox"
      >
        <input
          aria-label="Do you really agree?"
          class="ControlledInput"
          data-test-id="cf-ui-controlled-input"
          id="reallyAgree"
          type="checkbox"
          value=""
        />
        <label
          class="Checkbox__ghost"
          for="reallyAgree"
        />
      </div>
      <div
        class="Checkbox__label-wrapper"
      >
        <label
          class="FormLabel ControlledInputField__label"
          data-test-id="cf-ui-form-label"
          for="reallyAgree"
        >
          Do you really agree?
        </label>
        <p
          class="HelpText ControlledInputField__help-text"
          data-test-id="cf-ui-help-text"
        >
          Click if you really agree
        </p>
      </div>
    </div>
  </div>
</div>
`;
